--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,28 @@
   user-select: none;
 }
 
+.inputs{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
 .pdt-vl {
   border-radius: 10px;
   border: 1px solid rgb(182, 182, 182);
   padding: 0px 18px;
   width: 350px;
+  font-size: 1rem;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  height: 50px;
+}
+
+.pdt-pc{
+  border-radius: 10px;
+  border: 1px solid rgb(182, 182, 182);
+  padding: 0px 18px;
+  width: 180px;
   font-size: 1rem;
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
@@ -49,7 +66,7 @@
   color: rgb(182, 182, 182);
   user-select: none;
   font-size: 1.5rem;
-  height: 50px;
+  height: 50.5px;
   width: 50px;
   border-right: 0;
   font-weight: 200;
